# HomeServer.Dashboard

./: Cargo.toml  Makefile  go.mod  go.work  go.work.sum  main.go
.github/workflows/: ci.yaml  develop.yaml
core/: go.work  go.work.sum
core/cmd/: go.mod  main.go
core/common/: go.mod  hello.go
creates/driver/: Cargo.toml
creates/driver/src/: logger.rs
web/: package.json
web/app/: layout.tsx  page.tsx
web/src/entities/dashboard-item/: index.ts
web/src/entities/dashboard-item/types/: dashboard-item.ts
web/src/shared/types/: index.ts  next-props.ts
