[package]
name = "homeserver-dashboard"
version = "0.0.0"
edition.workspace = true

[[bin]]
name = "homeserver-dashboard-cli"
path = "src/bin/cli/main.rs"

[workspace]
members = [
    "creates/driver"
]

[workspace.package]
edition = "2021"

[dependencies]
clap = "4.5.21"
driver = "0.0.0"

[patch.crates-io]
driver = { path = "creates/driver" }
